# carla-rl

./: .gitignore  README.md  evaluation.json  project_structure.txt  pyproject.toml  requirements.txt
env/: world.py
lane_change_rl/: register.py
lane_change_rl/config/: config.yaml  loader.py
lane_change_rl/env/: action.py  actor_manager.py  exceptions.py  lane_change_env.py  observation.py  reward.py  traffic_manager.py  utils.py  world.py
lane_change_rl/models/: __init__.py  ego_vehicle.py
lane_change_rl/sensors/: __init__.py  base_sensor.py  collision_sensor.py  rgb_camera.py
scripts/: check_carla.py  check_env.py  evaluate.py  evaluate_sor_dqn.py  plot_results.py  random_agent.py  test.py  test_camera.py  test_collision.py  test_env.py  test_observation.py  test_phase1.py  test_spawn.py  test_world.py  train_ppo.py  train_sor_dqn.py
sor_dqn/: agent.py  config.py  learner.py  network.py  replay_buffer.py  train.py
utils/: random.py
